fix: adjust cards alignment

--- a/src/app/components/cards-container/cards-container.module.css
+++ b/src/app/components/cards-container/cards-container.module.css
@@ -3,6 +3,7 @@
   gap: 20px;
   flex-direction: row;
   width: 90%;
+  justify-content: center;
   margin: auto;
 }
 
